fixed upload directory

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -84,7 +84,7 @@ database:
   password: 24Pr1y@msh@  
   file:
   upload:
-    directory: /home/digisoft/ipalika/
+    directory: /home/archiesoft/photos/
 
 rest:
   protocol: http
